infra/k8s/items-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
        - name: items
          image: nilupulmadhawa/ema-item-service # us.gcr.io/microservices-333218/items
---
apiVersion: v1
kind: Service
metadata:
  name: items-service
spec:
  selector:
    app: items
  ports:
    - name: items
      protocol: TCP
      port: 3001
      targetPort: 3001
