infra/k8s/rating-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating-mongo
  template:
    metadata:
      labels:
        app: rating-mongo
    spec:
      containers:
        - name: rating-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: rating-mongo-service
spec:
  selector:
    app: rating-mongo
  ports:
    - name: rating
      protocol: TCP
      port: 27017
      targetPort: 27017
