infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: dev.local
      http:
        paths:
          - path: /api/item/?(.*)
            pathType: Prefix
            backend:
              service:
                name: items-service
                port:
                  number: 3001

          - path: /api/order/?(.*)
            pathType: Prefix
            backend:
              service:
                name: orders-service
                port:
                  number: 3001

          - path: /api/rating/?(.*)
            pathType: Prefix
            backend:
              service:
                name: rating-service
                port:
                  number: 3001

          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
